--- a/CODE/src/main/webapp/css/common.css
+++ b/CODE/src/main/webapp/css/common.css
@@ -1,9 +1,9 @@
-body{background-color:#FDFBFE;}
+body{background-color:#FDFBFE;padding-top: 62px;}
 .header-main-bg{background-color:#E02284;}
 .header-ul{list-style-type:none;}
 .header-ul>li{float:left;width:60px;height:50px;text-align:center;}
 .header-logo{height:100px;}
-.header-logo-ul{float:right;margin-top:3px;font-size:13px;}
+.header-logo-ul{float:right;font-size:13px;}
 .header-logo-ul>li{border-right:1px solid #D6D5D6;}
 //.header-logo-ul>li>a{color:black;}
 .header-menu>li>a{color:#FFFFFF;font-weight:bold;}
@@ -13,7 +13,7 @@ body{background-color:#FDFBFE;}
 .right-content-title{font-size:14px;color:#F52D96;font-weight:bold;margin-bottom:5px;}
 .right-content-text{font-size:12px;color:#666666;}
 .store-list-title{width:100%;height:35px;line-height:35px;background-color:#D96196;color:#FFFFFF;font-weight:bold;text-indent:2em;}
-.buy-car{width:150px;height:30px;line-height:30px;background-color:#E82D8E;color:#FFFFFF;text-align:center;margin-top:28px;border:1px solid #E02284;}
+.buy-car{width:150px;height:30px;line-height:30px;background-color:#E3007F;color:#FFFFFF;text-align:center;margin-top:15px;border:1px solid #E02284;}
 .buy-car-count{width:30px;height:28px;background-color:#FFFFFF;float:right;color:#E82D8E;}
 #buyCarContent{height:150px;width:300px;background-color:#FFFFFF;}
 .location{font-size:12px;color:#666666;font-weight:bold;margin-top:15px;margin-bottom:10px;padding-bottom:10px;border-bottom:1px dashed #E5E3E6;}
