--- a/CODE/src/main/webapp/css/common.css
+++ b/CODE/src/main/webapp/css/common.css
@@ -1,20 +1,15 @@
 body{background-color:#FDFBFE;padding-top: 62px;}
 .header-ul{list-style-type:none;}
 .header-ul>li{float:left;width:60px;height:50px;text-align:center;}
-.header-logo{height:100px;}
-.header-logo-ul{float:right;font-size:13px;}
-.header-logo-ul>li{border-right:1px solid #D6D5D6;}
-.header-menu>li>a{color:#FFFFFF;font-weight:bold;}
 .subject-text2{background-position: -250px -150px;background-image:url(../images/texts.png);background-repeat: no-repeat;height:35px;margin-top:20px;margin-bottom:10px;}
 .right-content{}
 .right-content>div{border-bottom:1px dashed #E5E3E6;margin:0px 5px 15px 5px;padding-bottom:10px;}
-.right-content-title{font-size:14px;color:#F52D96;font-weight:bold;margin-bottom:5px;}
-.right-content-text{font-size:12px;color:#666666;}
-.store-list-title{width:100%;height:35px;line-height:35px;background-color:#D96196;color:#FFFFFF;font-weight:bold;text-indent:2em;}
-.buy-car{width:150px;height:30px;line-height:30px;background-color:#E3007F;color:#FFFFFF;text-align:center;margin-top:15px;border:1px solid #E02284;}
-.buy-car-count{width:30px;height:28px;background-color:#FFFFFF;float:right;color:#E82D8E;}
+.right-content-title{font-size:14px;font-weight:bold;margin-bottom:5px;}
+.right-content-text{font-size:12px;}
+.buy-car{width:150px;height:30px;line-height:30px;color:#FFFFFF;text-align:center;margin-top:15px;border:1px solid #E02284;}
+.buy-car-count{width:30px;height:28px;background-color:#FFFFFF;float:right;}
 #buyCarContent{height:150px;width:300px;background-color:#FFFFFF;}
-.location{width:100%;font-size:12px;color:#666666;font-weight:bold;margin-top:15px;padding-bottom:10px;border-bottom:1px dashed #E5E3E6;}
+.location{width:100%;font-size:12px;font-weight:bold;margin-top:15px;padding-bottom:10px;border-bottom:1px dashed #E5E3E6;}
 .selector{border-bottom:1px dashed #E5E3E6;font-size:12px;}
 .bar-sort{height:40px;line-height:40px;background-color:#F6F6F4;margin:15px 0px 10px 0px;}
 .bar-sort>div{float:left;margin-left:10px;}
@@ -69,6 +64,9 @@ a.not-underline{TEXT-DECORATION:none}
 
 /*文字颜色-主色调,粉色*/
 .color-pink{color:#E3007F;}
+
+/*背景颜色-主色调，粉色*/
+.background-color-pink{background-color:#E3007F;}
 
 /*字体大小-12*/
 .font-size-12{font-size:12px}
